# Trainself

./: .gitignore  CMakeLists.txt  README.md
include/: AssetManager.h  ProductUI.h  StateMachine.h  loadSourceManager.h
include/core/: AssetManager.h  ProductUI.h  StateMachine.h
include/states/: EditorState.h  IState.h  MainState.h
src/: loadSourceManager.cpp  main.cpp
src/core/: AssetManager.cpp  ProductUI.cpp  StateMachine.cpp
src/states/: EditorState.cpp  MainState.cpp
tests/: CMakeLists.txt  test_StateMachine.cpp
